Updated skills of amazon

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -18,11 +18,11 @@
     {
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Managing live system working at scale of 500K requests per seconds and designing new features which can scale up the system even further.}
-        \item {Added support for native AWS clients to call internal servers using OAuth 2.0 based authorisation and authentication.}
-        \item {Also provide a mechanism for having a dynamic client configuration across the fleet to support fine grain access control and throttling for the clients on the fly.}
-        \item {Upgraded the metadata framework which allows ingestion of new attributes and running validations on the fly, giving faster feedback to our costumers.}
+        \item {Added support for native AWS clients to call internal servers using OAuth 2.0 based authentication and authorisation.}
+        \item {Provided a mechanism for having a dynamic client configuration across the server fleet to support fine grain access control and throttling for the clients on the fly.}
+        \item {Upgraded the metadata framework which allows dynamic ingestion of new attribute configuration and running associated validations, giving faster feedback to our customers.}
         \item {Designed a new caching framework which more than doubled the system performance while also being more resilient. The new design decreased the latency of UI operations on client side.}
-        \item {Full stack software developer working on Amazon's website used by sellers and vendors to manage their products.}
+        \item {Worked as a full-stack software developer on Amazon's vendor website used by sellers and vendors to manage their products.}
         \item {Learned to develop and manage systems at scale keeping customers first.}
       \end{cvitems}
     }
