CV updated , added latest work update.

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -19,6 +19,7 @@
       \begin{cvitems} % Description(s) of tasks/responsibilities
         \item {Managing live system working at scale of 500K requests per seconds and designing new features which can scale up the system even further.}
         \item {Added support for native AWS clients to call internal servers using OAuth 2.0 based authentication and authorisation.}
+        \item {Upgraded an old active service into micro services to be able to remove duplicate items on Amazon's website into a single item at scale.}
         \item {Provided a mechanism for having a dynamic client configuration across the server fleet to support fine grain access control and throttling for the clients on the fly.}
         \item {Upgraded the metadata framework which allows dynamic ingestion of new attribute configuration and running associated validations, giving faster feedback to our customers.}
         \item {Designed a new caching framework which more than doubled the system performance while also being more resilient. The new design decreased the latency of UI operations on client side.}
